tweaks of the control style

--- a/src/mzkit/mzkit/pages/PageMoleculeNetworking.resx
+++ b/src/mzkit/mzkit/pages/PageMoleculeNetworking.resx
@@ -168,6 +168,217 @@
   <metadata name="Column7.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="ImageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>174, 17</value>
+  </metadata>
+  <data name="ImageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAO
+        LwAAAk1TRnQBSQFMAgEBAgEAAQgBAAEIAQABIAEAASABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAGA
+        AwABIAMAAQEBAAEgBgABQKYAAS4BLQEsAU0BOgE1ATIBmQE6ATUBMgGZAToBNQEyAZkBOgE1ATIBmQE6
+        ATUBMgGZAkEBPwGZAkEBPwGZAkEBPwGZAkEBPwGZAkEBPwGZAkEBPwGZAkEBPwGZAkEBPwGZAkEBPwGZ
+        AkEBPwGZAkEBPwGZAkEBPwGZAkEBPwGZAkEBPwGZAkEBPwGZAkEBPwGZAkEBPwGZAkEBPwGZAkEBPwGZ
+        AkEBPwGZAkEBPwGZ/wCVAAE7ATcBNAGAAYcBbAFEAf8BhwFsAUQB/wGHAWwBRAH/AYcBbAFEAf8BgwFp
+        AUIB/wGNAYMBewH/AfsB+QH4Af8B+wH5AfgB/wH7AfkB+AH/AfsB+QH4Af8B+wH5AfgB/wH7AfkB+AH/
+        AfsB+QH4Af8B+wH5AfgB/wH7AfkB+AH/AfsB+QH4Af8B+wH5AfgB/wH7AfkB+AH/AfsB+QH4Af8B+wH5
+        AfgB/wH7AfkB+AH/AfsB+QH4Af8B+wH5AfgB/wH7AfkB+AH/AfsB+QH4Af8BmgGXAZQB//8AlQABPAE3
+        ATQBgAGHAWgBQQH/AYcBaAFBAf8BhwFoAUEB/wGHAWgBQQH/AYcBaAFBAf8BcgFiAVQB/wH7AfkB+AH/
+        AfsB+QH4Af8B+wH5AfgB/wH1AfMB8gH/Ad4B3AHbAf8BtAGvAboB/wGRAYcBowH/AXgBagGVAf8BZgFT
+        AYkB/wFcAUkBhAH/AV4BSwGFAf8BbAFaAY0B/wGAAXIBmQH/AZwBkwGpAf8BwwHAAcUB/wHmAeUB5AH/
+        AfsB+QH4Af8B+wH5AfgB/wH7AfkB+AH/AZwBmQGWAf//AJUAATwBNwE0AYABhQFjAT0B/wGFAWMBPQH/
+        AYUBYwE9Af8BhQFjAT0B/wGFAWMBPQH/AVkBQwEtAf8B+wH5AfgB/wH7AfkB+AH/AfkB9wH2Af8BpgGg
+        Aa0B/wFVAUABgQH/ATYBFAF+Af8BQwEhAYoB/wFUATUBlQH/AWABRAGdAf8BZgFKAaAB/wFmAUoBoAH/
+        AV0BQAGbAf8BTwEvAZEB/wE8ARkBhgH/ATcBFwF6Af8BawFcAYoB/wHJAccBxgH/AfoB+AH3Af8B+wH5
+        AfgB/wGfAZwBmQH//wAhAAGkAZkBUgGvAf8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFP
+        Av8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAf80AAE8
+        ATgBNAGAAX4BXQE5Af8BfgFdATkB/wF+AV0BOQH/AX4BXQE5Af8BfgFdATkB/wFVATwBIwH/AeIB3wHc
+        Af8B+wH5AfgB/wGdAZMBrAH/ATkBGAF7Af8BUgE0AZIB/wGlAZQBxQH/AdIByQHgAf8B5gHgAewB/wH0
+        AfAB9AH/AfoC9wH/AfoC9wH/AfAB6wHxAf8B4AHZAegB/wHKAb8B2wH/AYkBcgG0Af8BQAEfAYYB/wFC
+        ASYBfAH/AcwBxgHSAf8B+wH5AfgB/wGiAZ8BnAH//wAJAAEhAR8BHAEnAfEBwQE0Af8B8QHBATQB/wHx
+        AcEBNAH/AfEBwQE0Af8B8QHBATQC/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHm
+        AU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8B/wHx
+        AcEBNAH/AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/xwAATwBOAE0AYABdgFW
+        ATMB/wF2AVYBMwH/AXYBVgEzAf8BdgFWATMB/wF2AVYBMwH/AV0BQwEpAf8BtQGuAakB/wH7AfkB9wH/
+        AUgBKgGGAf8BKgEEAXkB/wHMAcIB2wH/AfsB+QH3Af8B+wH5AfcB/wH7AfkB9wH/AfsB+QH3Af8B+wH5
+        AfcB/wH7AfkB9wH/AfsB+QH3Af8B+wH5AfcB/wH7AfkB9wH/AfsB+QH3Af8BfAFlAasB/wEmAQABdwH/
+        AaIBkgG/Af8B+wH5AfcB/wGlAaIBngH//wAJAAHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/
+        AfEBwQE0Af8B8QHBATQC/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHm
+        AU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8B/wHxAcEBNAH/
+        AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/xwAATwBOAE0AYABbwFQAS0B/wFv
+        AVABLQH/AW8BUAEtAf8BbwFQAS0B/wFvAVABLQH/AV8BRQErAf8BlwGOAYcB/wH6AfkB9wH/AUgBKgGG
+        Af8BKgEEAXkB/wH6AfkB9wH/AfAB7wHtAf8B4AHfAd0B/wLTAdEB/wHKAckBxwH/AcUBxAHCAf8BxgHF
+        AcMB/wHNAcwBygH/AdcB1gHUAf8B5QHkAeIB/wH1AfQB8gH/AZQBgQG5Af8BJgEAAXcB/wGiAZIBvwH/
+        AfoB+QH3Af8BqAGmAaIB//8ACQAB8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/
+        AfEBwQE0Av8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAf8B4gGbARgC/wHmAU8B/wHlAaMBHgH/AeIBmwEY
+        Af8B4gGbARgB/wHiAZsBGAH/AeIBmwEYAf8B4gGbARgB/wHiAZsBGAL/AeYBTwL/AeYBTwL/AeYBTwH/
+        AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/HAABPAE4ATQBgAFm
+        AUgBJwH/AWYBSAEnAf8BZgFIAScB/wFmAUgBJwH/AWYBSAEnAf8BXQFDASgB/wGGAXsBcwH/AfoB+AH2
+        Af8BSAEqAYYB/wEpAQMBeAH/AcUBwwHCAf8BggF5AY8B/wFbAUcBgQH/AUQBKAF8Af8BMgEPAXkB/wEo
+        AQMBeAH/ASoBBQF4Af8BOAEXAXoB/wFKATEBfQH/AWQBVAGDAf8BlQGRAZkB/wF4AWUBngH/ASYBAAF3
+        Af8BogGSAb4B/wH6AfgB9gH/AawBqQGlAf//AAkAAfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0
+        Af8B8QHBATQB/wHxAcEBNAL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/
+        AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwH/AfEBwQE0
+        Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/HAABPAE4ATQBgAFfAUEBIQH/
+        AV8BQQEhAf8BXwFBASEB/wFfAUEBIQH/AV8BQQEhAf8BWQE/ASUB/wGFAXoBcQH/AfoB+AH1Af8BSAEq
+        AYYB/wEnAQEBeAH/AUgBLAGBAf8BUQEyAZEB/wF1AVwBqAH/AZIBfQG5Af8BpgGWAcUB/wGvAZ8BygH/
+        Aa8BnwHKAf8BoAGPAcIB/wGKAXMBtAH/AWoBTwGiAf8BQwEiAYYB/wE4ARcBfAH/ASYBAAF3Af8BogGS
+        Ab4B/wH6AfgB9QH/AbABrAGoAf//AAkAAfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHB
+        ATQB/wHxAcEBNAL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/
+        AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwH/AeIBmwEYAf8B4gGb
+        ARgB/wHiAZsBGAH/AeMBnwEbAf8B8QHBATQB/wHxAcEBNAH/HAABPAE4ATQBgAFXAToBHAH/AVcBOgEc
+        Af8BVwE6ARwB/wFXAToBHAH/AVcBOgEcAf8BUgE5ASEB/wGTAYkBgQH/AfkB9wH0Af8BSAEqAYYB/wEo
+        AQEBeAH/AW8BVgGiAf8B3AHVAeQB/wH5AfcB9AH/AfkB9wH0Af8B+QH3AfQB/wH5AfcB9AH/AfkB9wH0
+        Af8B+QH3AfQB/wH5AfcB9AH/AfgB9gH0Af8BwQG1AdQB/wFMASwBjgH/ASYBAAF3Af8BoQGRAb0B/wH5
+        AfcB9AH/AbMBsAGrAf//AAkAAfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wHx
+        AcEBNAL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwH/AeIBmwEYAv8B5gFPAf8B5QGjAR4B/wHiAZsBGAH/
+        AeIBmwEYAf8B4gGbARgB/wHiAZsBGAH/AeIBmwEYAf8B4gGbARgC/wHmAU8C/wHmAU8C/wHmAU8B/wHx
+        AcEBNAH/AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/xwAAT0BOAE0AYABUQE1
+        ARgB/wFRATUBGAH/AVEBNQEYAf8BUQE1ARgB/wFRATUBGAH/AUwBNAEdAf8BqgGiAZoB/wH4AfYB8wH/
+        AUgBKgGGAf8BKgEEAXkB/wHhAdsB5gH/AfgB9gHzAf8B+AH2AfMB/wH4AfYB8wH/AfgB9gHzAf8B+AH2
+        AfMB/wH4AfYB8wH/AfgB9gHzAf8B+AH2AfMB/wH4AfYB8wH/AfgB9gHzAf8BiAFxAbEB/wEmAQABdwH/
+        AaEBkQG9Af8B+AH2AfMB/wG1AbEBrAH//wAJAAHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/
+        AfEBwQE0Af8B8QHBATQC/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHm
+        AU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8B/wHxAcEBNAH/
+        AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/xwAAT0BOAE0AYABTAEwARQB/wFM
+        ATABFAH/AUwBMAEUAf8BTAEwARQB/wFMATABFAH/AUEBKgEUAf8B0QHMAccB/wH3AfUB8gH/AUgBKgGG
+        Af8BKgEEAXkB/wH3AfUB8gH/AeIB4AHeAf8BwwHBAb8B/wGqAakBpwH/AZcBlgGUAf8BjQGMAYoB/wGP
+        AY4BjAH/AZ0BnAGaAf8BsQGwAa4B/wHNAcsByQH/Ae0B6wHpAf8BkwF+AbcB/wEmAQABdwH/AaABkAG8
+        Af8B9wH1AfIB/wG2AbIBrQH//wAJAAHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wHiAZsBGAH/AfEBwQE0
+        Af8B8QHBATQC/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8B/wHlAaMBHgL/AeYBTwH/AfcB0AE/Af8B4gGb
+        ARgB/wHiAZsBGAH/AeIBmwEYAf8B4gGbARgB/wHiAZsBGAH/AeUBowEeAv8B5gFPAv8B5gFPAv8B5gFP
+        Af8B4gGbARgB/wHiAZsBGAH/AeIBmwEYAf8B4wGfARsB/wHxAcEBNAH/AfEBwQE0Af8cAAE9ATgBNAGA
+        AUsBLwETAf8BSwEvARMB/wFLAS8BEwH/AUsBLwETAf8BSwEvARMB/wFJATQBIQH/AfIB7gHrAf8B9wH0
+        AfEB/wFLAS4BhwH/AS4BCAF7Af8BkQGGAaAB/wFfAUkBiAH/AVMBOAGHAf8BUAEyAYsB/wFNAS4BjgH/
+        AUsBKwGPAf8BTAEsAY8B/wFOATABjQH/AVABNAGKAf8BVAE7AYYB/wFoAVUBiwH/AWABSAGOAf8BKwEF
+        AXoB/wGhAZIBvAH/AfcB9AHxAf8BtwGzAa4B//8ACQAB8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHB
+        ATQB/wHxAcEBNAH/AfEBwQE0Av8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAf8B5QGjAR4C/wHmAU8B/wH2
+        AdABPgH/AeIBmwEYAf8B4gGbARgB/wHiAZsBGAH/AeIBmwEYAf8B4gGbARgB/wHlAaMBHgL/AeYBTwL/
+        AeYBTwL/AeYBTwH/AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/
+        HAABPQE4ATQBgAFLAS8BEwH/AUsBLwETAf8BSwEvARMB/wFLAS8BEwH/AUsBLwETAf8BZQFUAUUB/wH2
+        AfMB7wH/AfYB8wHvAf8BTwEyAYoB/wEyAQ0BfgH/AUABHQGIAf8BcwFZAacB/wGrAZwBxgH/Ac8BxQHa
+        Af8B6AHjAegB/wHzAe8B7QH/AfMB7wHtAf8B4QHaAeQB/wHEAbkB1AH/AZ0BiwG+Af8BWAE5AZcB/wE5
+        ARUBhAH/ATIBDQF+Af8BowGTAb0B/wH2AfMB7wH/AbkBtAGvAf//AAkAAfEBwQE0Af8B8QHBATQB/wHx
+        AcEBNAH/AeMBnwEbAf8B8QHBATQB/wHxAcEBNAL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/
+        AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/
+        AeYBTwH/AeIBmwEYAf8B4gGbARgB/wHiAZsBGAH/Ae0BtwEsAf8B8QHBATQB/wHxAcEBNAH/HAABPQE5
+        ATQBgAFLAS8BEwH/AUsBLwETAf8BSwEvARMB/wFLAS8BEwH/AVQBOQEfAf8BggF0AWgB/wH1AfIB7gH/
+        AfUB8gHuAf8BVwE7AY8B/wE9ARoBhgH/AZUBhAGzAf8B6AHjAecB/wH1AfIB7gH/AfUB8gHuAf8B9QHy
+        Ae4B/wH1AfIB7gH/AfUB8gHuAf8B9QHyAe4B/wH1AfIB7gH/AfUB8QHuAf8B3AHUAeAB/wFpAVABnQH/
+        ATsBFwGFAf8BpwGXAb8B/wH1AfIB7gH/AboBtgGwAf//AAkAAfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/
+        AeQBnwEbAf8B8QHBATQB/wHxAcEBNAL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwH/AeIBmwEYAv8B5gFP
+        Af8B5QGjAR4B/wHiAZsBGAH/AeIBmwEYAf8B4gGbARgB/wHiAZsBGAH/AeIBmwEYAf8B4gGbARgC/wHm
+        AU8C/wHmAU8C/wHmAU8B/wHiAZsBGAH/AeIBmwEYAf8B4gGbARgB/wHtAbYBLAH/AfEBwQE0Af8B8QHB
+        ATQB/xwAAT4BOQE0AYABSwEvARMB/wFLAS8BEwH/AUsBLwETAf8BSwEvARMB/wFfAUkBNQH/AaUBnAGS
+        Af8B9AHxAewB/wH0AfEB7AH/AXUBXwGlAf8BRgElAYsB/wGHAXsBmAH/Ad8B3AHYAf8B9AHxAewB/wH0
+        AfEB7AH/AfQB8QHsAf8B9AHxAewB/wH0AfEB7AH/AfQB8QHsAf8B9AHxAewB/wH0AfEB7AH/AcsByAHE
+        Af8BZwFRAZIB/wFEASMBiwH/AbUBqQHJAf8B9AHxAewB/wG7AbcBsAH//wAJAAHxAcEBNAH/AfEBwQE0
+        Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHBATQC/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHm
+        AU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHm
+        AU8C/wHmAU8B/wHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wgA
+        AQwCCwEPAw4BEwMIAQsDAwEEAwABAQE+ATkBNAGAAUsBLwETAf8BSwEvARMB/wFLAS8BEwH/AU8BMwEY
+        Af8BQwEwAR4B/wHWAc8ByAH/AfQB8AHrAf8B9AHwAesB/wHZAdEB3QH/AYUBbQGwAf8BZQFLAZoB/wF1
+        AWQBlQH/AZMBiAGgAf8BpwGgAasB/wG2AbIBswH/AbwBuQG2Af8BvAG5AbYB/wGyAa0BsQH/AaEBmQGn
+        Af8BigF9AZsB/wFpAVQBkwH/AWsBUQGgAf8BmAGFAbsB/wHnAeAB5AH/AfQB8AHrAf8BvQG4AbIB//8A
+        CQAB8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Av8B5gFPAv8B5gFP
+        Av8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFP
+        Av8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAf8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wHx
+        AcEBNAH/AfEBwQE0Af8IAAElASQBIwE0AS8BLQErAUUCJQEjATUDFAEbAwgBCgE+ATkBNAGCAUsBLwET
+        Af8BSwEvARMB/wFLAS8BEwH/AVYBPQEkAf8BSQE4ASgB/wHyAe4B6QH/AfIB7gHpAf8B8gHuAekB/wHy
+        Ae4B6QH/AecB4QHkAf8BvQGxAc8B/wGPAXoBtwH/AXgBXwGrAf8BbQFTAaQB/wFlAUkBnwH/AWABQwGc
+        Af8BYQFEAZwB/wFoAUwBoQH/AXABVwGmAf8BfQFlAa4B/wGcAYoBvQH/Ac0BwwHXAf8B8gHuAekB/wHy
+        Ae4B6QH/AfIB7gHpAf8BvQG4AbIB//8ACQAB8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wHx
+        AcEBNAH/AfEBwQE0Av8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFP
+        Av8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAf8B8QHBATQB/wHx
+        AcEBNAH/AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8IAAEwAS4BLAFIAUIBPgE3AXEBQwE+
+        ATcBdAE5ATcBMgFaASsBKgEoAT4BQQE6ATMBlwFGASsBEQH/AUcBLQESAf8BSAEtARIB/wFKATMBHAH/
+        AZsBkAGEAf8B5QHfAdcB/wHeAdgB0AH/AeAB2wHTAf8B6gHlAd8B/wHwAewB5gH/AfIB7QHoAf8B6QHj
+        AeQB/wHbAdMB3QH/AdEBxwHYAf8ByAG9AdQB/wHEAbgB0gH/AcUBuQHTAf8BywHAAdYB/wHUAcoB2gH/
+        AeAB2AHfAf8B7gHoAeYB/wHyAe0B6AH/AfIB7QHoAf8B8gHtAegB/wHyAe0B6AH/Ab8BugGzAf//AAkA
+        AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wHxAcEBNAL/AeYBTwL/AeYBTwL/
+        AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwL/
+        AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwH/AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHB
+        ATQB/wHxAcEBNAH/CAABLgEtASsBPwGgAZwBlwHEAUoBQwE5AZABSwFDATkBkwFIAUIBOQGEAT8BNgEr
+        AbsBNwEhAQwB/wE6ASQBDQH/ATwBJgENAf8BNgEjAREB/wG8AbMBpQH/AboBsQGjAf8BsAGmAZYB/wG3
+        Aa0BngH/Ac8ByAG8Af8B5wHiAdkB/wHvAesB5AH/AfAB7AHlAf8B8AHsAeUB/wHwAewB5QH/AfAB7AHl
+        Af8B8AHsAeUB/wHwAewB5QH/AfAB7AHlAf8B8AHsAeUB/wHwAewB5QH/AfAB7AHlAf8B8AHsAeUB/wHw
+        AewB5QH/AfAB7AHlAf8B7AHoAeEB/wG6AbYBrwH//wAJAAHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wHi
+        AZsBGAH/AeIBmwEYAf8B4gGbARgC/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8B/wHiAZsBGAH/AeIBmwEY
+        Af8B4gGbARgB/wHiAZsBGAH/AeIBmwEYAf8B4gGbARgB/wHiAZsBGAH/AeIBmwEYAf8B5QGjAR4C/wHm
+        AU8C/wHmAU8C/wHmAU8B/wHiAZsBGAH/AeIBmwEYAf8B4gGbARgB/wHjAZ8BGwH/AfEBwQE0Af8B8QHB
+        ATQB/wgAAhYBFQEdAWwBawFoAYUB4QHgAd8B7wGcAZcBjwHQAWsBZAFXAbcBPQE0ASYB1AErARkBCQH/
+        AS0BGgEJAf8BLgEbAQkB/wE3ASgBGgH/AZABggFuAf8BiwF9AWgB/wGGAXgBYwH/AZMBhgFxAf8BqQGe
+        AY0B/wHOAcUBugH/AecB4gHZAf8B7wHqAeMB/wHwAesB5AH/AfAB6wHkAf8B8AHrAeQB/wHwAesB5AH/
+        AfAB6wHkAf8B8AHrAeQB/wHwAesB5AH/AfAB6wHkAf8B7wHqAeMB/wHsAecB4QH/AecB4gHbAf8B2QHU
+        Ac4B/wG/AbsBtQH/AaMBngGYAf//AAkAAfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHB
+        ATQB/wHxAcEBNAL/AeYBTwL/AeYBTwL/AeYBTwL/AeYBTwH/AeIBmwEYAf8B4gGbARgB/wHiAZsBGAH/
+        AeIBmwEYAf8B4gGbARgB/wHiAZsBGAH/AeIBmwEYAf8B4gGbARgB/wHlAaMBHgL/AeYBTwL/AeYBTwL/
+        AeYBTwH/AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/CAADCwEO
+        AhwBGwEmAVQBUgFOAXEB8gHxAfAB9wT/AekB4wHcAf8BqwGgAZMB/wGHAXoBbgH/AVABQgE1Af8BPAEw
+        ASIB/wGIAXkBZgH/AZ4BkgGBAf8B4QHWAcgB/wHVAcsBvgH/AYUBdwFiAf8BqAGdAY0B/wHOAcYBugH/
+        AeYB4AHXAf8B7QHoAeEB/wHuAekB4gH/Ae4B6QHiAf8B7gHpAeIB/wHuAekB4gH/Ae4B6QHiAf8B7gHp
+        AeIB/wHgAdwB1gH/Ac8BywHFAf8BxgHBAbwB/wGxAa4BqAH/AZYBlAGPAf8BggF+AXoB/wGMAYgBggH9
+        /wAJAAHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wHjAZ8BGwH/AeIBmwEYAf8B4gGbARgC/wHmAU8C/wHm
+        AU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHm
+        AU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8B/wHiAZsBGAH/AeIBmwEYAf8B4gGbARgB/wHtAbcBLAH/
+        AfEBwQE0Af8B8QHBATQB/wgAAwUBBwMOARIBHAEbARoBJQFJAUgBRQFgAaMBoQGfAbwB7ALrAfQE/wH+
+        AfoB8wH/AfwB9QHrAf8B/AH1Ae0B/wH8AfUB7AH/Af4B9wHtBf8B+QHuAeAB/wGyAacBlgH/AYgBeAFl
+        Af8BpQGZAYgB/wHGAb0BsAH/AdwB1QHMAf8B5gHgAdgB/wHsAeYB3gH/Ae0B5wHgAf8B7gHoAeEB/wHs
+        AeYB3wH/AeQB3gHXAf8BtQGwAasB/wGJAYUBgQH/AYEBfQF6Af8BcwFwAW0B/wFhAWABcwH/AWIBVwGV
+        Af8BcAFkAZEB8f8ACQAB8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B5AGfARsB/wHiAZsBGAH/AeIBmwEY
+        Av8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAf8B4gGbARgB/wHiAZsBGAH/AeIBmwEYAf8B4gGbARgB/wHi
+        AZsBGAH/AeIBmwEYAf8B4gGbARgB/wHiAZsBGAH/AeIBmwEYAv8B5gFPAv8B5gFPAv8B5gFPAf8B4gGb
+        ARgB/wHiAZsBGAH/AeIBmwEYAf8B7QG2ASwB/wHxAcEBNAH/AfEBwQE0Af8IAAMBAQIDBQEHAwwBEAEX
+        AhYBHgIjASEBMQFJAUMBOwGfAaYBmgGPAf8B8gHwAe8N/wL8AfsB/wHnAeQB4AX/AfkB6wHbAf8BqAGc
+        AYsB/wF+AXABWwH/AZgBiwF3Af8BswGmAZcB/wHJAb8BsgH/AdgBzwHEAf8B4QHZAc8B/wHmAd8B1gH/
+        AeEB2gHTAf8BsAGrAaUB/wF3AXQBcgH/AVQBUgFdAf8BSgFLAXYB/wFIAT0BnAH/AVkBMwGsAf8BTgEn
+        AaAB/wFbAVQBgAHa/wAJAAHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHB
+        ATQC/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHm
+        AU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8B/wHxAcEBNAH/AfEBwQE0Af8B8QHB
+        ATQB/wHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wwAAwYBCAEUAhMBGgEhASABHwEtASQBIwEiATIBQgE7
+        ATQBmAFXATwBHwH/AVUBOgEeAf8BYgFLATEB/wGEAXcBaAH/AcgBwAGzAf8BtwGsAZwB/wGoAZwBigH/
+        AdgB0gHLBf8B+QH1Ae4B/wHCAbgBqQH/AYoBfAFoAf8BiAF5AWUB/wGYAYsBdwH/AakBnAGLAf8BtgGr
+        AZwB/wHFAbsBrgH/AcsBwwG5Af8BNgEQAYUB/wFCARsBlAH/AUIBGwGUAf8BQAEZAZIB/wE7ARQBjQH/
+        ATMBDQGEAf8BKwEQAXsB/wJcAWwBrP8ACQABnAGGAUYBrAHxAcEBNAH/AfEBwQE0Af8B8QHBATQB/wHx
+        AcEBNAH/AfEBwQE0Av8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFP
+        Av8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAf8B8QHBATQB/wHx
+        AcEBNAH/AfEBwQE0Af8B8QHBATQB/wHxAcEBNAH/AfEBwQE0Af8MAAMKAQ0BJAEjASIBMwE6ATcBMwFc
+        AT4BOwE2AWYBQgE6AS8BrQFZAT4BIQH/AVsBQAEjAf8BWwFAASIB/wFmAVcBRgH/AbMBqQGZAf8BpgGb
+        AYkB/wGfAZMBgQH/AaQBmQGHAf8BzgHHAb4B/wP9Bf8B9wH2AfUB/wG0AaoBnAH/AYQBdQFhAf8BiAF5
+        AWQB/wGQAYMBbgH/AaEBlQGCAf8BswGpAZ0B/wEjAQABagH/ASYBAAF3Af8BJgEAAXcB/wEmAQABdwH/
+        ASYBAAF2Af8BIwEAAW4B/wE5ATwBhwH/ATgBNwE2AUr/ACEAAe8B2AFSAfIB/wHmAU8C/wHmAU8C/wHm
+        AU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHmAU8C/wHm
+        AU8C/wHmAU8C/wHmAU8B/yMAAQEDCgENASMBIgEhATEBUwFPAUkBfQFIAUIBOQGEAT4BNAEpAcQBTAE0
+        ARwB/wFOATYBHQH/AU8BNgEdAf8BTQE9ASwB/wGMAX0BaQH/AYUBdgFhAf8BhwF5AWQB/wGSAYUBcAH/
+        AaQBmAGGAf8BvQG0AaYB/wHaAdUBzQH/Ae4B7AHoBf8B8gHwAe4B/wHZAdQBzgH/AccBwAG2Af8BwQG4
+        AawB/wGuAaUBoAH/ASMBAAFuAf8BJgEAAXcB/wEmAQABdwH/ASYBAAF3Af8BJAEAAXEB/wEwASEBeQH/
+        AWcBZgFpAaQDCgEN/wAlAAHvAdgBUgHyAf8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFP
+        Av8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAv8B5gFPAf8BpAGZAVIBryMAAQEDBgEI
+        AxUBHAKcAZgBsQHdAdoB2AHqAYUBfQF1AeMBUQE8ASQB/wFJATMBGwH/AUcBMQEaAf8BOgEsARsB/wF9
+        AW8BWwH/AcgBwQG5Af8B6AHlAeEB/wGAAXEBXQH/AYoBewFoAf8BnwGTAYAB/wGsAaABjwH/AbEBpgGV
+        Af8BtAGpAZgB/wHIAcABswH/AdcB0QHHAf8B5QHgAdoB/wHiAd0B1gH/AaIBlgGiAf8BKQEDAXYB/wEr
+        AQQBeQH/ASoBAwF4Af8BKAEDAXIB/wEjAQgBbgH/AWEBYAF4AcgDAAEB/wCJAAMDAQQDCgENAh4BHQEn
+        AVwBWwFZAXIBrwGtAaoB0wH8AfsB+gH/AfgB9wH1Af8B7QHrAekB/wHuAe0B7AX/Av4B/QX/AdYB0QHK
+        Af8BkQGFAXIB/wGDAXMBXwH/AY0BfgFqAf8BlgGJAXUB/wGhAZQBggH/AbUBqQGZAf8BywHCAbMB/wHY
+        AdABxAH/AdcB0AHFAf8BigF4AZ0B/wFKASsBjgH/AUcBKAGLAf8BQwElAYIB/wFCATIBgQH/AmcBfgHR
+        AiwBKwE5/wCNAAMBAQIDBAEGAwsBDgMSARgBQgE8ATQBkQFwAVIBMAH/AZUBgAFoAf8BtAGnAZcB/wG5
+        Aa8BpQH/AcEBugGxAf8BvAGzAaMB/wHpAeYB4gn/AckBwwG6Af8BigF8AWgB/wGLAXwBaAH/AZYBiAF1
+        Af8BrwGkAZQB/wHQAcgBvAH/AeAB2gHRAf8BzQHHAcAB/wGDAXABowH/AW8BWAGiAf8BZQFPAZQB/wFa
+        AVgBlQH/AnYBgQHHAxUBG/8AlAAEAQECAwQBBgMIAQoBQQE7ATUBiAGKAXABVQH/AYcBbwFTAf8BhQFt
+        AVEB/wF6AWMBSgH/AVkBSQE2Af8B2wHVAcwB/wHTAc0BwgH/Ad8B2wHTAf8B7QHqAecB/wH1AfQB8gH/
+        AvYB8wH/AeoB5wHjAf8B4AHcAdYB/wHbAdUBzQH/AecB4gHcAf8B8QHuAeoB/wG8AbQBxgH/AXEBXQGa
+        Af8BdwFmAZQB/wF3AXUBjQHfA14BhwMVARv/AKQAAQEBQQE6ATQBgQEsARcBAAH/ASwBFgEAAf8BLAEW
+        AQAB/wEsARYBAAH/ASwBFgEAAf8BjQGDAXUB/wGgAZkBjgH/AZwBlAGJAf8BmAGPAYMB/wGUAYsBgAH/
+        AZIBigF9Af8BlAGNAYEB/wGZAZEBhgH/AaABmAGOAf8BpQGeAZQB/wGmAZ8BlQH8AZwBlwGQAecBgwF/
+        AXoBuQFcAVoBWAF7AxcBHf8AGQABQgFNAT4HAAE+AwABKAMAAYADAAEgAwABAQEAAQEGAAECFgAD/wEA
+        BP8B+AsABP8B+AsABP8B+AsABP8B+AsAAf8CAAH/AfgLAAHAAgABAwH4CwABwAIAAQMB+AsAAcACAAED
+        AfgLAAHAAgABAwH4CwABwAIAAQMB+AsAAcACAAEDAfgLAAHAAgABAwH4CwABwAIAAQMB+AsAAcACAAED
+        AfgLAAHAAgABAwH4CwABwAIAAQMB+AsAAcACAAEDDAABwAIAAQMMAAHAAgABAwwAAcACAAEDDAABwAIA
+        AQMMAAHAAgABAwwAAcACAAEDDAABwAIAAQMMAAHAAgABAwGACwABwAIAAQMBgAsAAf8CAAH/DAAB/wGA
+        AQAB/wMAAQEIAAT/AYACAAEDCAAE/wGAAgABBwgABP8BgAIAAQ8IAAT/AfACAAE/CAAL
+</value>
+  </data>
   <metadata name="ContextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
