--- a/src/mzkit/mzkit/pages/dockWindow/explorer/frmRawFeaturesList.resx
+++ b/src/mzkit/mzkit/pages/dockWindow/explorer/frmRawFeaturesList.resx
@@ -124,47 +124,33 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAA8
-        CQAAAk1TRnQBSQFMAwEBAAEYAQABGAEAASABAAEgAQAE/wEZAQAI/wFCAU0BNgcAATYDAAEoAwABgAMA
-        ASADAAEBAQABGAYAATD/AJwAAcoByQHG/wB7AAFwAWsBYwFhAVsBUwF7AXABX/8AeAABygHJAcYBpQGc
-        AY4BfAFxAWEBewFwAV//AHgAAYsBgQFxAaUBnAGOAXwBcQFhAXsBcAFf/wB4AAGLAYEBcQGlAZwBjgF8
-        AXEBYQF7AXABX/8AeAABlQGOAYABpQGcAY4BfAFxAWEBewFwAV//AHgAAZUBjgGAAaUBnAGOAXwBcQFh
-        AXsBcAFf/wB4AAGVAY4BgAGlAZwBjgF8AXEBYQF7AXABX/8AeAABlQGOAYABpQGcAY4BfAFxAWEBewFw
-        AV//AHgAAZUBjgGAAaUBnAGOAVkBUwFKAXcBdQFxDwABxAG9AbQBzAHFAbwBzAHFAbwBzAHFAbwBxgHC
-        Abz/AFoAAWkBZQFcAdcB0AHGAYUBgQF7AXcBdQFxAwAB4gHgAd4BzAHFAbwBjgGJAXUB9QHyAe0B9gHz
-        Ae4B9gHzAe8B9wH2AfMB7wHtAekBzAHFAbwBzAHFAbz/AFoAAdcB0AHGAYUBgQF7AcwBxQG8AZgBkgGA
-        AfUB7wHoAfYB8QHrAfYB8gHtAfcB8wHvAfcB9QHxAfgB9gHzAfkB9wH0AfkB9wH1AfkB+AH3AcwBxQG8
-        /wBaAAHNAcYBvAHIAb8BrwH1Ae0B4wH1Ae8B5gH1AfAB6AH2AfEB6gH2AfIB7AH3AfMB7gH3AfQB8AH4
-        AfUB8gH4AfYB9AH5AfcB9QH3AfUB8wHMAcUBvP8AVAABxgHCAbsBhQGAAWsB9AHrAd0B9AHsAeAB9QHt
-        AeMB9QHvAeUB9QHwAecB9gHxAeoB9gHyAewB9wHzAe4B9wH0AfAB9wH1AfEB+AH2AfMB+QH3AfUB9wH2
-        AfMBzAHFAbz/AFEAAc8ByAG/AfIB5gHWAfQB6QHaAfQB6wHeAfUB7AHfAfUB7QHiAfUB7gHlAfUB7wHn
-        AfYB8AHpAfYB8gHrAfYB8wHtAfcB9AHvAfcB9QHxAfgB9gHzAfkB9wH1AdQB0AHHAbYBrgGm/wBLAAHs
-        AesB6gGgAZcBgwHzAecB1AH0AegB1wH0AekB2QH0AeoB3AH0AesB3wH1Ae0B4gH1Ae4B5AH1Ae8B5gH1
-        AfAB6AH2AfEB6gH2AfIB7QH3AfMB7wH3AfQB8AH4AfUB8gH2AfQB8QHMAcUBvP8ASwAB0gHLAcIB5gHW
-        AcIB9AHmAdEB8wHnAdQB9AHoAdYB9AHpAdkB9AHqAdwB9AHrAd4B9AHsAeEB9QHtAeMB9QHvAeUB9QHw
-        AegB9gHxAeoB9gHyAewB9gHzAe4B9wH0AfAB+AH1AfIBzAHFAbz/AEsAAdMBzAHDAe0B3AHHAfQB5QHO
-        AfMB5gHQAfQB5gHTAfMB5wHVAfQB6AHYAfQB6gHbAfQB6wHdAfQB7AHgAfUB7QHjAfUB7gHlAfUB8AHn
-        AfYB8QHpAfYB8gHsAfcB8wHuAfcB9AHwAYABewFl/wBLAAHUAc0BwwHvAd8ByAH1AeQBzQH0AeQBzgH0
-        AeUB0AH0AeYB0gHzAecB1QH0AegB1wH0AekB2gH0AeoB3QH1AewB3wH1Ae0B4gH1Ae4B5AH1Ae8B5wH2
-        AfAB6QH2AfEB6wH2AfMB7QG3AbIBo/8ASwAB1QHOAcQB6wHbAcYB9QHlAcwB9QHlAc0B9AHkAc0B9AHl
-        Ac8B8wHlAdIB9AHnAdQB9AHoAdYB9AHpAdkB9AHqAdwB9AHrAd4B9QHsAeEB9QHuAeQB9QHvAeYB9QHw
-        AegB9gHxAeoBigGEAXD/AEsAAdUBzgHEAeIB0AG4AfcB5wHOAfYB5AHMAfUB5QHNAfQB5AHNAfQB5QHO
-        AfQB5gHRAfMB5gHTAfQB6AHWAfQB6AHZAfQB6gHbAfQB6wHeAfQB7AHhAfUB7QHjAfUB7wHlAfUB8AHo
-        AcwBxQG8/wBOAAGbAZUBgwH4AecB0AH3AeYBzQH2AeUBzAH1AeMBywH0AeMBzQH0AeUBzgH0AeUB0AH0
-        AeYB0gH0AecB1QH0AegB2AH0AeoB2wH0AesB3gH1AewB4AH1Ae0B4gH0Ae0B4wHMAcUBvP8ATgAB1wHQ
-        AcYB6wHfAc0B+AHoAdAB9gHlAc0B9QHkAcsB9QHkAcwB9QHkAc0B9AHlAc4B8wHkAdAB9AHmAdIB8wHn
-        AdUB9AHoAdcB9AHpAdoB9AHqAd0B9AHrAd8BjgGJAXUC8gHx/wBRAAHXAdABxgHzAeUBzwH4AecB0AH3
-        AeUBzgH2AeQBzAH1AeQBzAH0AeMBywH0AeQBzQH0AeUBzwHzAeYB0QH0AecB1AH0AecB1gH0AekB2QHt
-        AeMB1QHMAcUBvP8AVAABxQG/AbYBxwHAAbQB8QHkAc8B+AHoAdEB9wHmAc4B9gHkAcsB9QHjAcsB9QHk
-        AcsB9AHkAcwB9AHkAc4B9AHlAdAB9AHmAdMB6wHdAswBxQG8/wBaAAHRAc0ByAHXAdABxgHiAc8BtQH3
-        AeYBzwH3AecBzgH2AeUBywH2AeQBywH1AeQBywH0AeQBywHyAeEBywGFAYABawHNAcYBvf8AYwAB1wHQ
-        AcYB1gHPAcUBgAF7AWUB2wHFAaUB2wHGAakBwAGyAZoBzAHFAbsB0AHJAcAB0gHOAcn/AG8AAdQB0QHL
-        AcEBuwGyAfAB7wHu/wD/AP8A/wD/AMMAAUIBTQE+BwABPgMAASgDAAGAAwABIAMAAQEBAAEBBgABAhYA
-        A/8BAAT/DAAB7wP/DAABxwP/DAABwwP/DAAB4QP/DAAB8AP/DAAB+AF/Av8MAAH8AT8C/wwAAf4BHwL/
-        DAAB/wEPAv8MAAH/AYcBwQH/DAAB/wHCAQABfwwAAf8B8AEAAT8MAAH/AfgBAAEfDAAB/wHwAQABDwwA
-        Af8B8AEAAQcMAAH/AeABAAEHDAAB/wHgAQABBwwAAf8B4AEAAQcMAAH/AeABAAEHDAAB/wHgAQABBwwA
-        Af8B4AEAAQcMAAH/AfABAAEHDAAB/wHwAQABBwwAAf8B+AEAAQ8MAAH/AfgBAAEfDAAB/wH8AQABPwwA
-        Av8BAAF/DAAC/wHjAf8MAAT/DAAE/wwABP8MAAs=
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADk
+        BQAAAk1TRnQBSQFMAwEBAAEIAQABCAEAARgBAAEYAQAE/wEZAQAI/wFCAU0BNgcAATYDAAEoAwABYAMA
+        ARgDAAEBAQABGAYAARsYAAL1AfT/ABsAA/ABlgGRAY0BugG1Aa7/ABgAA+8BsQGrAaEBfAFxAWEBugG2
+        Aa7/ABgAAd4B3AHZAZwBkwGEAYUBewFqAcsBxwHC/wAYAAHpAegB5gGZAZEBgwGFAXoBawG6AbUBrf8A
+        GAAC6QHnAaABlwGJAXwBcQFhAboBtgGu/wAYAAHgAd4B2wGfAZcBiQGFAXsBagHLAccBwv8AGAAB6gHp
+        AegBmQGRAYMBdgFtAWECtwG1CQAD9AHdAdoB1gHeAdwB2AHeAdsB2AH1AvT/AAHlAeQB4wGxAasBoQGF
+        AYEBewK4AbYB6AHnAeYBzAHFAbwBsAGsAZ0B9gHzAe4B9gHzAe8B9AHzAfAB2AHSAcsBzAHFAbwD//8A
+        AeMB4AHcAawBpwGeAb0BtwGpAfUB7wHnAfYB8QHrAfcB8wHtAfcB9AHwAfgB9QHyAfkB9wH0AfkB+AH2
+        AeAB3QHXA/r8AAHcAdoB1gG1Aa8BngHvAecB2wH1Ae4B5AH1Ae8B5wH2AfEB6gH2AfIB7QH3AfMB8AH3
+        AfUB8gH4AfYB9AHzAfEB7gHgAdwB1wP/9gAD/wHOAccBvgHzAecB1wH0AeoB3QH1AewB3wH1Ae0B4wH1
+        Ae8B5gH2AfAB6QH2AfIB7AH3AfQB7gH3AfUB8QH4AfYB9AHgAd0B1gG2Aa4BpvYAAegB5wHmAbgBrAGY
+        AfMB5wHUAfQB6QHXAfQB6gHbAfQB6wHfAfUB7QHiAfUB7gHlAfUB8AHoAfYB8gHrAfcB8wHuAfcB9AHw
+        AfcB9AHxAcwBxQG89gAB4gHfAdsB6wHaAcUB9AHlAdAB9AHnAdMB8wHoAdYB9AHpAdoB9AHrAd0B9AHs
+        AeEB9QHuAeUB9QHwAecB9gHxAeoB9gHyAe4B9wH0AfABmQGUAYP2AAHjAd8B2wHvAd8ByAH1AeQBzQH0
+        AeUBzwH0AeYB0gHzAecB1gH0AekB2QH0AeoB3QH1AewB4AH1Ae4B4wH1Ae8B5wH2AfAB6gH2AfIB7AG3
+        AbIBo/YAAeMB4AHbAegB1wHBAfYB5QHMAfQB5AHNAfQB5QHOAfMB5gHSAfQB5wHUAfQB6QHYAfQB6gHc
+        AfUB7AHfAfUB7QHjAfUB7wHmAfYB8QHoAaABmgGK9gAB9gL1AbIBqAGUAfgB5wHOAfYB5QHMAfUB4wHM
+        AfQB5AHOAfQB5QHQAfQB5wHTAfQB6AHXAfQB6gHbAfQB6wHfAfUB7QHiAfQB7gHkAcwBxQG8+QAB1gHP
+        AcUB7wHiAc4B9wHmAc4B9QHkAcsB9QHkAcwB9AHlAc4B8wHkAdAB9AHmAdMB9AHoAdYB9AHpAdoB9AHq
+        Ad4BsAGqAZkC8QHw/AAB1wHPAcIB8AHhAc0B9wHmAc8B9gHkAcwB9AHjAcsB9AHkAcwB9AHlAc8B9AHm
+        AdIB9AHnAdUB7AHhAdIB3gHaAdMD//wAAeQB4gHfAdoB0gHHAekB1wG+AfcB5gHOAfYB5QHMAfYB5AHL
+        AfUB5AHMAfMB4wHMAaoBogGOAd4B2AHSA/r/AAYAAdYBzwHFAbgBsgGkAbwBrAGQAdsBxgGpAcQBuAGl
+        Ac4BxwG9AdEBzQHI/wASAAHsAesB6gHaAdcB0wPx/wD/AP8AMAABQgFNAT4HAAE+AwABKAMAAWADAAEY
+        AwABAQEAAQEFAAEgAQEWAAP/AQAB3wL/CQABjwL/CQABhwL/CQABwwL/CQAB4QL/CQAB8AL/CQAB+AF/
+        Af8JAAH8ATgBPwkAAf4BAAEPCQAB/wGAAQcJAAH/AYABAwkAAf8BAAEDCQAB/wEAAQMJAAH/AQABAwkA
+        Af8BAAEDCQAB/wEAAQMJAAH/AQABAwkAAf8BgAEDCQAB/wHAAQMJAAH/AcABBwkAAf8B8AEfCQAB/wH8
+        AX8JAAP/CQAD/wkACw==
 </value>
   </data>
 </root>
