--- a/src/mzkit/mzkit/pages/dockWindow/explorer/frmFileExplorer.resx
+++ b/src/mzkit/mzkit/pages/dockWindow/explorer/frmFileExplorer.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="TextBox2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Panel1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Button1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="ImageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -125,7 +134,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADk
-        BQAAAk1TRnQBSQFMAwEBAAEoAQABKAEAARgBAAEYAQAE/wEZAQAI/wFCAU0BNgcAATYDAAEoAwABYAMA
+        BQAAAk1TRnQBSQFMAwEBAAEwAQABMAEAARgBAAEYAQAE/wEZAQAI/wFCAU0BNgcAATYDAAEoAwABYAMA
         ARgDAAEBAQABGAYAARsYAAL1AfT/ABsAA/ABlgGRAY0BugG1Aa7/ABgAA+8BsQGrAaEBfAFxAWEBugG2
         Aa7/ABgAAd4B3AHZAZwBkwGEAYUBewFqAcsBxwHC/wAYAAHpAegB5gGZAZEBgwGFAXoBawG6AbUBrf8A
         GAAC6QHnAaABlwGJAXwBcQFhAboBtgGu/wAYAAHgAd4B2wGfAZcBiQGFAXsBagHLAccBwv8AGAAB6gHp
@@ -946,4 +955,7 @@
         mWaauT8iHmymmWbuj4gHm2mmmfsh6sz/D23eCO/hlKLAAAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
